Update dashboardView.java